
   * Fully consistent API (defined and correct return values)

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems,
     etc).  sometimes it just fails period

=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.94

   * fixed yet another ray-tracing alpha channel bug with mixed 
     transparent/opaque objects.

   * new setting overlay_lines, overlay becomes a boolean toggle

   * specular now acts as a binary veto over spec_reflect and
     specular_intensity holds the OpenGL spec. intensity

   * ray_trace_fog deprecated (subservient to depth_cue)

   * Mac OSX native port completed as "MacPyMOL" Incentive Product
      - support for additional file extensions
      - GUI remembers last open location
      - QuickTime movie export
      - Cut and Paste image export

   * fixed bug in SelectorCountStates

   * default roving_polar_cutoff increased to 3.31 in order to show 
     marginal/potential hydrogen bonds

   * adjusted Z origin movement strategy again, and fixed problem
     with undesirable apparent z-translation in orthoscopic mode

   * pdb_insertions_go_first setting for handling structures where
     inserted residues come before, not after, the numbered residue.
     
   * Added support for older, binary-header O/DSN6 maps, including
     swap_dsn6_bytes setting (for unlikely scenarios).

Changes up to 0.93

   * Restored ability to read version 0.86 sessions with CGOs.

   * Fixed bug with O/BRIX map reading code.

   * Changed roving_origin behavior with respect to Z axis.

   * P5M file handling for browser helper (for Metaphorics, mostly).

Changes up to 0.92

   * added RPM support for "import pymol", fixed several bugs running
     PyMOL in this fashion, with or without a GUI.  

   * fixed alpha channel handling for transparent surfaces in ray tracer